--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-highlight": "^0.15.0",
     "react-select-search": "^4.1.8",
     "tailwindcss": "^4.0.9"
   },
