--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
     "lucide-react": "^0.477.0",
+    "randomatic": "^3.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-highlight": "^0.15.0",
     "react-select-search": "^4.1.8",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^4.0.9",
+    "use-file-picker": "^2.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
